--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -1,4 +1,5 @@
 .contact-form {
+  padding: 1rem;
   label {
     display: grid;
     gap: 0.2rem;
@@ -40,7 +41,7 @@
 
 .map-container {
   height: 400px;
-  width: 100% !important;
+  width: 100%;
   border: 2px solid #639bee7c;
   box-shadow: 2px 2px 8px #5e98f07c;
   border-bottom-right-radius: 10px;
